# RiceHPCDevitoWorkshop2026

./: .gitignore  Modified_04_boundary_domains.ipynb  README.md  pyproject.toml
notebooks/: Modified_04_boundary_domains.ipynb  SRC_REC_QC_07_functions_on_subdomains.ipynb  SubDomain_FixAbsBC_04_boundary_domains.ipynb  SubDomain_QC_04_boundary_domains.ipynb  SubDomain_QC_Source_04_boundary_domains.ipynb  SubDomain_QC_Stencils_04_boundary_domains.ipynb
src/: devito_qc_utils.py
