[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devito_qc_utils"
version = "0.1.0"
description = "Quality control utilities for Devito notebooks."
authors = [
    { name = "Your Name" }
]
readme = ""
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
